--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -1113,16 +1113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Counter({'loan_status': 1})"
+       "Counter({'high_risk': 51351, 'low_risk': 46389})"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1130,12 +1130,15 @@
    "source": [
     "# Resample the training data with SMOTEENN\n",
     "# Warning: This is a large dataset, and this step may take some time to complete\n",
-    "# YOUR CODE HERE"
+    "from imblearn.combine import SMOTEENN\n",
+    "smote_enn = SMOTEENN(random_state = 1)\n",
+    "X_resampled, y_resampled = smote_enn.fit_resample(X_train, y_train)\n",
+    "Counter(y_resampled)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1144,81 +1147,81 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Train the Logistic Regression model using the resampled data\n",
-    "# YOUR CODE HERE"
+    "classifier = LogisticRegression(solver='lbfgs', random_state = 1)\n",
+    "classifier.fit(X_resampled, y_resampled) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.6400726134353378"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Calculated the balanced accuracy score\n",
-    "# YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  71,   30],\n",
-       "       [7232, 9872]])"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Display the confusion matrix\n",
-    "# YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                   pre       rec       spe        f1       geo       iba       sup\n",
+      "0.5390874745713455\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculated the balanced accuracy score\n",
+    "y_pred = classifier.predict(X_test)\n",
+    "print(accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  61   26]\n",
+      " [7904 9214]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display the confusion matrix\n",
+    "matrix = confusion_matrix(y_test, y_pred)\n",
+    "print(matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
       "\n",
-      "  high_risk       0.01      0.70      0.58      0.02      0.64      0.41       101\n",
-      "   low_risk       1.00      0.58      0.70      0.73      0.64      0.40     17104\n",
+      "   high_risk       0.01      0.70      0.02        87\n",
+      "    low_risk       1.00      0.54      0.70     17118\n",
       "\n",
-      "avg / total       0.99      0.58      0.70      0.73      0.64      0.40     17205\n",
+      "    accuracy                           0.54     17205\n",
+      "   macro avg       0.50      0.62      0.36     17205\n",
+      "weighted avg       0.99      0.54      0.70     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "# YOUR CODE HERE"
+    "report = classification_report(y_test, y_pred)\n",
+    "print(report)"
    ]
   },
   {
