Revise Deliverables 1 & 2, Add Deliverable 3

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "[5 rows x 86 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
        "[8 rows x 95 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
        "Name: loan_status, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
        "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,27 +769,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6835222319093287\n"
+      "0.6293939430565123\n"
      ]
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import balanced_accuracy_score\n",
     "y_pred = classifier.predict(X_test)\n",
-    "print(accuracy_score(y_test, y_pred))"
+    "print(balanced_accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -803,35 +803,34 @@
    ],
    "source": [
     "# Display the confusion matrix\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "matrix = confusion_matrix(y_test, y_pred)\n",
     "print(matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "   high_risk       0.01      0.57      0.02        87\n",
-      "    low_risk       1.00      0.68      0.81     17118\n",
+      "  high_risk       0.01      0.57      0.68      0.02      0.63      0.39        87\n",
+      "   low_risk       1.00      0.68      0.57      0.81      0.63      0.40     17118\n",
       "\n",
-      "    accuracy                           0.68     17205\n",
-      "   macro avg       0.50      0.63      0.41     17205\n",
-      "weighted avg       0.99      0.68      0.81     17205\n",
+      "avg / total       0.99      0.68      0.58      0.81      0.63      0.40     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "report = classification_report(y_test, y_pred)\n",
+    "from imblearn.metrics import classification_report_imbalanced\n",
+    "report = classification_report_imbalanced(y_test, y_pred)\n",
     "print(report)"
    ]
   },
@@ -844,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +852,7 @@
        "Counter({'low_risk': 51352, 'high_risk': 51352})"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -877,7 +876,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,26 +889,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6346410927056089\n"
+      "0.6277008271188627\n"
      ]
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
     "y_pred = classifier.predict(X_test)\n",
-    "print(accuracy_score(y_test, y_pred))"
+    "print(balanced_accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -929,28 +928,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "   high_risk       0.01      0.62      0.02        87\n",
-      "    low_risk       1.00      0.63      0.78     17118\n",
+      "  high_risk       0.01      0.62      0.63      0.02      0.63      0.39        87\n",
+      "   low_risk       1.00      0.63      0.62      0.78      0.63      0.39     17118\n",
       "\n",
-      "    accuracy                           0.63     17205\n",
-      "   macro avg       0.50      0.63      0.40     17205\n",
-      "weighted avg       0.99      0.63      0.77     17205\n",
+      "avg / total       0.99      0.63      0.62      0.77      0.63      0.39     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "report = classification_report(y_test, y_pred)\n",
+    "report = classification_report_imbalanced(y_test, y_pred)\n",
     "print(report)"
    ]
   },
@@ -973,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -996,7 +993,7 @@
        "Counter({'high_risk': 260, 'low_risk': 260})"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1008,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1014,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1030,34 +1027,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.43522231909328685\n"
+      "0.5107398543980726\n"
      ]
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
     "y_pred = classifier.predict(X_test)\n",
-    "print(accuracy_score(y_test, y_pred))"
+    "print(balanced_accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[  52   35]\n",
-      " [9682 7436]]\n"
+      "[[  51   36]\n",
+      " [9667 7451]]\n"
      ]
     }
    ],
@@ -1069,28 +1066,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "   high_risk       0.01      0.60      0.01        87\n",
-      "    low_risk       1.00      0.43      0.60     17118\n",
+      "  high_risk       0.01      0.59      0.44      0.01      0.51      0.26        87\n",
+      "   low_risk       1.00      0.44      0.59      0.61      0.51      0.25     17118\n",
       "\n",
-      "    accuracy                           0.44     17205\n",
-      "   macro avg       0.50      0.52      0.31     17205\n",
-      "weighted avg       0.99      0.44      0.60     17205\n",
+      "avg / total       0.99      0.44      0.59      0.60      0.51      0.25     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "report = classification_report(y_test, y_pred)\n",
+    "report = classification_report_imbalanced(y_test, y_pred)\n",
     "print(report)"
    ]
   },
@@ -1113,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1117,7 @@
        "Counter({'high_risk': 51351, 'low_risk': 46389})"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1147,7 +1142,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1160,26 +1155,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5390874745713455\n"
+      "0.619706620576848\n"
      ]
     }
    ],
    "source": [
     "# Calculated the balanced accuracy score\n",
     "y_pred = classifier.predict(X_test)\n",
-    "print(accuracy_score(y_test, y_pred))"
+    "print(balanced_accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1199,28 +1194,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "   high_risk       0.01      0.70      0.02        87\n",
-      "    low_risk       1.00      0.54      0.70     17118\n",
+      "  high_risk       0.01      0.70      0.54      0.02      0.61      0.38        87\n",
+      "   low_risk       1.00      0.54      0.70      0.70      0.61      0.37     17118\n",
       "\n",
-      "    accuracy                           0.54     17205\n",
-      "   macro avg       0.50      0.62      0.36     17205\n",
-      "weighted avg       0.99      0.54      0.70     17205\n",
+      "avg / total       0.99      0.54      0.70      0.70      0.61      0.37     17205\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the imbalanced classification report\n",
-    "report = classification_report(y_test, y_pred)\n",
+    "report = classification_report_imbalanced(y_test, y_pred)\n",
     "print(report)"
    ]
   },
